--- a/README
+++ b/README
@@ -14,5 +14,8 @@ https://nl.wikipedia.org/wiki/Hero%C3%AFne
 # gaskamer
 https://nl.wikipedia.org/wiki/Gaskamer
 
+# mass killing
+https://en.wikipedia.org/wiki/Mass_killing
+
 # erasmusbrug
 https://en.wikipedia.org/wiki/Erasmusbrug
