--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 | bemoeizorg-door-de-strot-geduwd |
 -----------------------------------
 
-'kilogram heroine'
+'kilogram institutional heroine'
 
 
 # huisartsenpost
